--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,8 +8,8 @@
 			"name": "Launch",
 			"type": "go",
 			"request": "launch",
-			"mode": "debug",
-			"program": "${fileDirname}",
+			"mode": "auto",
+			"program": "${workspaceRoot}",
 			"env": {},
 			"args": []
 		}
